/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.2.1/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building an application
    id 'application'

    // Fat JARs for easier distribution to places
    id 'com.github.johnrengelman.shadow' version '7.1.0'

    // Distribute latest git information in jar
    id 'com.peterabeles.gversion' version '1.10'

    // Clean testing output
    id 'com.adarshr.test-logger' version '2.1.0'

    // Code coverage
    id 'jacoco'
    id 'de.jansauer.printcoverage' version '2.0.0'

    // Database version control
    id 'org.liquibase.gradle' version '2.1.1'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

liquibase {
    def props = new Properties()
    def propsFile = file("liquibase.properties")
    if (propsFile.exists()) {
        propsFile.withInputStream {
            props.load(it)
        }
    }
    else {
        logger.warn("$propsFile.name doesn't exist. Reading from environment variables instead.")
        props.setProperty("url", "jdbc:postgresql://$System.env.HOST/$System.env.DB?currentSchema=$System.env.SCHEMA")
        props.setProperty("username", "$System.env.USER")
        props.setProperty("password", "$System.env.PASS")
    }
    activities {
        main {
            changelogfile "sql/postgres/master.yml"
            url props.getProperty("url")
            username props.getProperty("username")
            password props.getProperty("password")
        }
    }
}

shadowJar {
    minimize {
        exclude(dependency('org.cache2k:cache2k-core.*:.*'))
        exclude(dependency('ch.qos.logback:logback-classic.*:.*'))
        exclude(dependency('ch.obermuhlner:java-scriptengine.*:.*'))
        exclude(dependency('org.postgresql:postgresql.*:.*'))
    }
}

rootProject.tasks.named("shadowJar") {
    duplicatesStrategy = 'include'
}

gversion {
    srcDir = "src/main/java/"
    classPackage = "io.banditoz.mchelper"
    className = "Version"
    timeZone = "UTC"
    debug = false
    language = "java"
    explicitType = false
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}

repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
    maven {
        url 'https://m2.dv8tion.net/releases'
        name 'm2-dv8tion'
    }
    maven {
        url 'https://jitpack.io'
        name 'jitpack'
    }
}

dependencies {
    implementation('net.dv8tion:JDA:5.0.0-alpha.18') {
        exclude module: 'opus-java'
    }
    implementation 'ch.qos.logback:logback-classic:1.2.11'
    implementation 'com.udojava:EvalEx:2.7'
    implementation 'org.scilab.forge:jlatexmath:1.0.7'
    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'io.github.tfriedrichs:dicebot:1.0.0'
    implementation 'org.postgresql:postgresql:42.4.1'
    implementation 'com.zaxxer:HikariCP:5.0.1'
    implementation 'io.jenetics:facilejdbc:2.0.0'
    implementation 'org.cache2k:cache2k-api:1.2.3.Final'
    implementation 'net.sourceforge.argparse4j:argparse4j:0.9.0'
    implementation('org.knowm.xchart:xchart:3.8.1') {
        ["graphics2d", "VectorGraphics2D", "animated-gif-lib"].each { module -> exclude module: module }
    }
    implementation 'org.reflections:reflections:0.10.2'
    implementation 'me.xdrop:fuzzywuzzy:1.4.0'
    implementation 'ch.obermuhlner:java-scriptengine:2.0.0'
    implementation 'org.liquibase:liquibase-core:4.14.0'
    implementation 'com.mattbertolini:liquibase-slf4j:4.1.0'
    implementation 'org.yaml:snakeyaml:1.30'
    implementation 'com.github.minndevelopment:emoji-java:6.1.0'

    runtimeOnly 'org.cache2k:cache2k-core:1.2.3.Final'
    runtimeOnly 'org.antlr:antlr4-runtime:4.7.2' // holding out of date as the dice roller will throw warnings otherwise

    testImplementation 'org.testng:testng:7.6.1'
    testImplementation 'org.mockito:mockito-core:4.7.0'
    testImplementation 'org.assertj:assertj-core:3.23.1'

    liquibaseRuntime 'org.liquibase:liquibase-core:4.14.0'
    liquibaseRuntime 'org.liquibase:liquibase-groovy-dsl:3.0.2'
    liquibaseRuntime 'info.picocli:picocli:4.6.3'
    liquibaseRuntime 'org.yaml:snakeyaml:1.30'
    liquibaseRuntime 'org.postgresql:postgresql:42.4.1'
}

test {
    useTestNG()
    jvmArgs("--enable-preview")
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs.add("--enable-preview")
}

// Define the main class for the application
mainClassName = 'io.banditoz.mchelper.Bot'
project.compileJava.dependsOn(createVersionFile)
